# StockScreener

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: health.py  overrides.py  refresh.py  screeners.py
backend/app/jobs/: runner.py  scheduler.py
backend/app/pipeline/: orchestrator.py  stages.py
backend/app/screeners/: __init__.py  bankruptcy.py  base.py  strong_balance.py
backend/app/sources/: edgar.py  finra_shortint.py  optionable.py  universe.py  yfinance_client.py
backend/app/util/: filings_text.py  http.py  numbers.py
backend/scripts/: bootstrap_universe.py  check_progress.py  inspect_db.py  repro_stall.py  run_refresh.py
backend/tests/: test_filings_text.py  test_screener_bankruptcy.py  test_screener_strong_balance.py  test_universe.py  test_xbrl.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BondOverridesDialog.tsx  ResultsTable.tsx
frontend/src/hooks/: useRefresh.ts  useScreenerResults.ts
frontend/src/lib/: format.ts
