[project]
name = "stockscreener-backend"
version = "0.1.0"
description = "Local stock screener — bankruptcy candidates + strong balance sheets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "aiolimiter>=1.1",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
